MKT-7143: enabled preview